Refactor 'Qui êtes-vous?' section with new profiles
Updated the section 'Qui êtes-vous?' to include profiles for Huguette, Anthony, Réjean, and Anne-Sophie with improved structure and alt text for images.

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -36,51 +36,98 @@
     </section>
 
     <!-- ===== SECTION : QUI ÊTES-VOUS ? (photo gauche / texte droite) ===== -->
-    <section class="terminal-section article-section" id="profil">
-      <h2>Qui êtes-vous&nbsp;?</h2>
+    <section class="terminal-section article-section" id="qui-etes-vous">
+  <h2>Qui êtes-vous&nbsp;?</h2>
 
-      <div class="profil-wrapper">
-        <div class="profil-image">
-          <!-- Chemin relatif si la page est dans /projects/phares/ -->
-          <img src="img/huguette.jpeg">
-        </div>
+  <!-- ===== PROFIL : HUGUETTE ===== -->
 
-        <div class="profil-texte">
-          <p>
-            <strong>Huguette, 74&nbsp;ans, retraitée.</strong><br><br>
-            Totalement autonome dans l’utilisation d’appareils informatiques, elle utilise sa tablette pour jouer en ligne,
-            préparer son prochain voyage dans le sud, relever ses courriels et accéder à ses comptes bancaires.
-            Elle entend souvent parler d’escroqueries en ligne dans les médias, mais ne sait pas quelles mesures concrètes
-            elle pourrait prendre pour s’en protéger.
-          </p>
-        </div>
+  <div class="profil-wrapper">
+    <div class="profil-image">
+      <img src="img/huguette.jpeg" alt="Huguette, 74 ans, retraitée">
+    </div>
 
+    <div class="profil-texte">
+      <p>
+        <strong>Huguette, 74&nbsp;ans, retraitée.</strong><br><br>
+        Totalement autonome dans l’utilisation d’appareils informatiques, elle utilise sa tablette pour jouer en ligne,
+        préparer son prochain voyage dans le sud, relever ses courriels et accéder à ses comptes bancaires.
+        Elle entend souvent parler d’escroqueries en ligne dans les médias, mais ne sait pas quelles mesures concrètes
+        elle pourrait prendre pour s’en protéger.
+      </p>
+    </div>
+  </div>
 
-      </div>
-      <div class="profil-wrapper">  
-        <div class="profil-image">
-          <!-- Chemin relatif si la page est dans /projects/phares/ -->
-          <img src="img/anthony.jpeg">
-        </div>
+  <hr class="section-divider">
 
+  <!-- ===== PROFIL : ANTHONY ===== -->
 
-        <div class="profil-texte">
-          <p>
-            <strong>Anthony, 28&nbsp;ans, jeune professionnel à son compte.</strong><br><br>
-            Travaille à distance en tant que spécialiste en effets spéciaux dans l’industrie du jeu vidéo. 
-            Il utilise son équipement informatique à titre personnel comme professionnel. Lui aussi entend les nouvelles dans les médias, 
-            s’inquiète des impacts potentiels d’une attaque par rançongiciel sur son activité, de la protection de ses crypto-monnaies, 
-            et de sa responsabilité personnelle en cas de fuite de données confidentielles d’un client si l’un de ses actifs informatiques était compromis. 
-          </p>
-        </div>
-      </div>
-      <!-- Encadré façon “À retenir” -->
-      <div class="callout-retain">
-        <strong>À retenir</strong><br>
-        Une phrase courte et mémorable.
-      </div>
+  <div class="profil-wrapper">
+    <div class="profil-image">
+      <img src="img/anthony.jpeg" alt="Anthony, 28 ans, travailleur autonome">
+    </div>
 
-    </section>
+    <div class="profil-texte">
+      <p>
+        <strong>Anthony, 28&nbsp;ans, jeune professionnel à son compte.</strong><br><br>
+        Travaille à distance en tant que spécialiste en effets spéciaux dans l’industrie du jeu vidéo.
+        Il utilise son équipement informatique à titre personnel comme professionnel.
+        Il s’inquiète des impacts potentiels d’une attaque par rançongiciel sur son activité,
+        de la protection de ses crypto-monnaies,
+        et de sa responsabilité personnelle en cas de fuite de données confidentielles d’un client
+        si l’un de ses actifs informatiques était compromis.
+      </p>
+    </div>
+  </div>
+
+  <hr class="section-divider">
+
+  <!-- ===== PROFIL : RÉJEAN ===== -->
+
+  <div class="profil-wrapper">
+    <div class="profil-image">
+      <img src="img/rejean.jpeg" alt="Réjean, 58 ans, commis en grande surface">
+    </div>
+
+    <div class="profil-texte">
+      <p>
+        <strong>Réjean, 58&nbsp;ans, commis dans un magasin de bricolage.</strong><br><br>
+        Il utilise l’informatique pour le divertissement (jeux en ligne), accéder à ses comptes bancaires et faire des achats en ligne. 
+        Il se sent souvent perdu face aux problèmes informatiques qu’il rencontre au quotidien, essaie de suivre quelques recommandations trouvées sur internet,
+        mais les trouve compliquées et difficiles à mettre en oeuvre. 
+        Il aurait besoin de conseils prodigués de vive voix, plutôt que de lire de longs articles qu’il peine souvent a comprendre. 
+      </p>
+  </div>
+  </div>
+
+  <hr class="section-divider">
+
+  <!-- ===== PROFIL : ANNE-SOPHIE ===== -->
+
+  <div class="profil-wrapper">
+    <div class="profil-image">
+      <img src="img/anne-sophie.jpeg">
+    </div>
+
+    <div class="profil-texte">
+      <p>
+        <strong>Anne-Sophie, 12&nbsp;ans, collégienne, et ses parents.</strong><br><br>
+        Dispose d’un téléphone et d’une tablette sur lesquels elle joue en ligne avec ses amis, et utilise divers réseaux sociaux pour communiquer avec eux. 
+        Elle se connecte sur le réseau wifi familial, qu’utilisent aussi ses parents quand ils travaillent à distance. 
+        Ces derniers s’inquiètent des menaces en ligne que pourrait subir leur fille, 
+        et se demandent si les jeux gratuits qu’elle télécharge ne contiennent pas des virus qui pourraient se propager à tous les appareils informatiques domestiques.
+      </p>
+    </div>
+  </div>
+
+  <div class="callout-retain">
+    <strong>Quatre profils différents, un problème commun.</strong><br>
+    Ces quatre profils partagent un élément commun:  toutes et tous font un usage quotidien de leurs appareils connectés, ont conscience que leurs activités en ligne  ne sont pas sans risque, et aimeraient s’assurer qu’ils sont correctement protégés. 
+    Submergés par un flot d’informations sur la meilleure conduite à tenir, ils peinent toutefois à s’y retrouver, et pensent que la mise en place d’une protection efficace n’est pas dans leur champ de compétences naturelles. 
+    Après tout, ils n’ont pas eu besoin d’acquérir des compétences avancées en électricité pour pouvoir utiliser des appareils électriques domestiques en toute sécurité.
+  </div>
+
+</section>
+
 
     <!-- ===== SECTION TYPE : THÈME / MYTHE ===== -->
     <section class="terminal-section" id="mythe-1">
