--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -85,7 +85,7 @@
 
   <div class="profil-wrapper">
     <div class="profil-image">
-      <img src="img/rejean.jpeg" alt="Réjean, 58 ans, commis en grande surface">
+      <img src="img/rejean.jpeg">
     </div>
 
     <div class="profil-texte">
@@ -96,7 +96,7 @@
         mais les trouve compliquées et difficiles à mettre en oeuvre. 
         Il aurait besoin de conseils prodigués de vive voix, plutôt que de lire de longs articles qu’il peine souvent a comprendre. 
       </p>
-  </div>
+    </div>
   </div>
 
   <hr class="section-divider">
