Update text and formatting in citoyens.html
Revised text for clarity and formatting in the section about user profiles.

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -38,7 +38,8 @@
     <!-- ===== SECTION : QUI ÊTES-VOUS ? (photo gauche / texte droite) ===== -->
     <section class="terminal-section article-section" id="qui-etes-vous">
   <h2>Qui êtes-vous&nbsp;?</h2>
-
+  
+  <hr class="section-divider">
   <!-- ===== PROFIL : HUGUETTE ===== -->
 
   <div class="profil-wrapper">
@@ -91,10 +92,10 @@
     <div class="profil-texte">
       <p>
         <strong>Réjean, 58&nbsp;ans, commis dans un magasin de bricolage.</strong><br><br>
-        Il utilise l’informatique pour le divertissement (jeux en ligne), accéder à ses comptes bancaires et faire des achats en ligne. 
+        Il utilise l’informatique à la maison pour le divertissement (jeux en ligne), accéder à ses comptes bancaires et faire des achats en ligne. 
         Il se sent souvent perdu face aux problèmes informatiques qu’il rencontre au quotidien, essaie de suivre quelques recommandations trouvées sur internet,
         mais les trouve compliquées et difficiles à mettre en oeuvre. 
-        Il aurait besoin de conseils prodigués de vive voix, plutôt que de lire de longs articles qu’il peine souvent a comprendre. 
+        Il aurait besoin de conseils prodigués de vive voix, plutôt que de lire de longs articles qu’il peine souvent à comprendre. 
       </p>
     </div>
   </div>
@@ -120,10 +121,11 @@
   </div>
 
   <div class="callout-retain">
-    <strong>Quatre profils différents, un problème commun.</strong><br>
-    Ces quatre profils partagent un élément commun:  toutes et tous font un usage quotidien de leurs appareils connectés, ont conscience que leurs activités en ligne  ne sont pas sans risque, et aimeraient s’assurer qu’ils sont correctement protégés. 
-    Submergés par un flot d’informations sur la meilleure conduite à tenir, ils peinent toutefois à s’y retrouver, et pensent que la mise en place d’une protection efficace n’est pas dans leur champ de compétences naturelles. 
-    Après tout, ils n’ont pas eu besoin d’acquérir des compétences avancées en électricité pour pouvoir utiliser des appareils électriques domestiques en toute sécurité.
+    <strong>Quatre profils différents, un problème commun.</strong><br><br>
+    Ces quatre profils partagent un élément commun:  
+    <li>toutes et tous font un usage quotidien de leurs appareils connectés, ont conscience que leurs activités en ligne  ne sont pas sans risque, et aimeraient s’assurer qu’ils sont correctement protégés. </li>
+    <li>Submergés par un flot d’informations sur la meilleure conduite à tenir, ils peinent toutefois à s’y retrouver, et pensent que la mise en place d’une protection efficace n’est pas dans leur champ de compétences naturelles.</li> 
+    <li>Après tout, ils n’ont pas eu besoin d’acquérir des compétences avancées en électricité pour pouvoir utiliser des appareils électriques domestiques en toute sécurité. </li>
   </div>
 
 </section>
