--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -122,11 +122,11 @@
 
   <div class="callout-retain">
     <strong>Quatre profils différents, un problème commun.</strong><br><br>
-    Ces quatre profils partagent un élément commun:  
-    <li>toutes et tous font un usage quotidien de leurs appareils connectés, ont conscience que leurs activités en ligne  ne sont pas sans risque, et aimeraient s’assurer qu’ils sont correctement protégés. </li>
-    <li>Submergés par un flot d’informations sur la meilleure conduite à tenir, ils peinent toutefois à s’y retrouver, et pensent que la mise en place d’une protection efficace n’est pas dans leur champ de compétences naturelles.</li> 
-    <li>Après tout, ils n’ont pas eu besoin d’acquérir des compétences avancées en électricité pour pouvoir utiliser des appareils électriques domestiques en toute sécurité. </li>
-  </div>
+    Ces quatre profils partagent un élément commun: <br> 
+    - Toutes et tous font un usage quotidien de leurs appareils connectés, ont conscience que leurs activités en ligne  ne sont pas sans risque, et aimeraient s’assurer qu’ils sont correctement protégés. <br>
+    - Submergés par un flot d’informations sur la meilleure conduite à tenir, ils peinent toutefois à s’y retrouver, et pensent que la mise en place d’une protection efficace n’est pas dans leur champ de compétences naturelles.<br>
+    - Après tout, ils n’ont pas eu besoin d’acquérir des compétences avancées en électricité pour pouvoir utiliser des appareils électriques domestiques en toute sécurité. <br>
+</div>
 
 </section>
 
