Replace header with new section for citizen protection

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -17,15 +17,24 @@
   <main class="container">
 
     <!-- ===== EN-TÊTE TYPE "protection-pme.html" ===== -->
-    <header style="margin-bottom:18px;">
-      <h1 style="margin:0 0 8px 0;">Projet phare — Protection des citoyens</h1>
-      <p style="margin:0 0 12px 0; opacity:.9;">
-        Ajouter ici une phrase courte qui résume l’objectif de la page (à la manière de l’intro sous le titre).
-      </p>
-      <p style="margin:0;">
-        <a href="/index.html">← Retour à l’accueil</a>
-      </p>
-    </header>
+  <!-- ===== ENTÊTE ARTICLE ===== -->
+  <section class="terminal-section" id="header-citoyens"
+           style="text-align:center; background-color:#0d0d0d; color:#e5e7eb;
+                  padding:60px 20px 40px; border-bottom:1px solid #1f2937; border-radius:12px 12px 0 0;">
+
+    <div style="font-size:3.5em; color:#3fb950; margin-bottom:10px;">🔒</div>
+    <h1 style="font-size:2rem; margin-bottom:10px; color:#3fb950;">
+      Projet phare #2 : Programme de protection des citoyens face aux menaces en ligne
+    </h1>
+    <p style="font-size:1.2em; max-width:800px; margin:0 auto; color:#d1d5db; line-height:1.6;">
+      Aider les citoyens à détecter et se défendre des menaces en ligne.
+    </p>
+    <p style="text-align:center; margin-top:20px;">
+      <a class="return-link" href="/">
+        ← Retour à l'accueil
+      </a>
+    </p>  
+  </section>
 
     <!-- ===== SECTION : INTRODUCTION ===== -->
     <section class="terminal-section" id="introduction">
