Update project description for citizen protection program

--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -27,7 +27,7 @@
       Projet phare #2 : Programme de protection des citoyens face aux menaces en ligne
     </h1>
     <p style="font-size:1.2em; max-width:800px; margin:0 auto; color:#d1d5db; line-height:1.6;">
-      Aider les citoyens à détecter et se défendre des menaces en ligne.
+      Sensibiliser les citoyens aux techniques utilisées par les escrocs et les moyens de s'en défendre..
     </p>
     <p style="text-align:center; margin-top:20px;">
       <a class="return-link" href="/">
