--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projet phare — Protection des citoyens (brouillon) | SQLTemp</title>
-  <meta name="description" content="Page en cours de rédaction. Le contenu sera enrichi progressivement.">
+  <title>Projet phare #2 — Programme de protection des citoyens face aux menaces en ligne</title>
 
   <!-- CSS global + custom (custom après, impératif) -->
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -27,7 +26,7 @@
       Projet phare #2 : Programme de protection des citoyens face aux menaces en ligne
     </h1>
     <p style="font-size:1.2em; max-width:800px; margin:0 auto; color:#d1d5db; line-height:1.6;">
-      Sensibiliser les citoyens aux techniques utilisées par les escrocs et les moyens de s'en défendre..
+      Sensibiliser les citoyens aux techniques utilisées par les escrocs et renforcer leurs moyens de défense.
     </p>
     <p style="text-align:center; margin-top:20px;">
       <a class="return-link" href="/">
