--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -25,7 +25,7 @@
     <h1 style="font-size:2rem; margin-bottom:10px; color:#3fb950;">
       Projet phare #2 : Programme de protection des citoyens face aux menaces en ligne
     </h1>
-    <p style="font-size:1.2em; max-width:800px; margin:0 auto; color:#d1d5db; line-height:1.6;">
+    <p style="text-align:center; font-size:1.2em; max-width:800px; margin:0 auto; color:#d1d5db; line-height:1.6;">
       Sensibiliser les citoyens aux techniques utilisées par les escrocs et renforcer leurs moyens de défense.
     </p>
     <p style="text-align:center; margin-top:20px;">
@@ -35,16 +35,8 @@
     </p>  
   </section>
 
-    <!-- ===== SECTION : INTRODUCTION ===== -->
-    <section class="terminal-section" id="introduction">
-      <h2>Introduction</h2>
-      <p>
-        [Texte à venir — tu peux reprendre le même ton que “protection-pme.html” : contexte, enjeux, pourquoi c’est utile.]
-      </p>
-    </section>
-
     <!-- ===== SECTION : QUI ÊTES-VOUS ? (photo gauche / texte droite) ===== -->
-    <section class="terminal-section article-section" id="qui-etes-vous">
+  <section class="terminal-section article-section" id="qui-etes-vous">
   <h2>Qui êtes-vous&nbsp;?</h2>
   
   <hr class="section-divider">
