--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Projet phare #2 — Programme de protection des citoyens face aux menaces en ligne</title>
+  <title>Projet phare #2 — Protection des citoyens face aux menaces en ligne</title>
 
   <!-- CSS global + custom (custom après, impératif) -->
   <link rel="stylesheet" href="/assets/css/style.css">
@@ -122,7 +122,7 @@
 
   <div class="callout-retain">
     <strong>Quatre profils différents, un problème commun.</strong><br><br>
-    Ces quatre profils partagent un élément commun: <br><br>
+
     - Toutes et tous font un usage quotidien de leurs appareils connectés, ont conscience que leurs activités en ligne  ne sont pas sans risque, et aimeraient s’assurer qu’ils sont correctement protégés.<br><br>
     - Submergés par un flot d’informations sur la meilleure conduite à tenir, ils peinent toutefois à s’y retrouver, et pensent que la mise en place d’une protection efficace n’est pas dans leur champ de compétences naturelles.<br><br>
     - Après tout, ils n’ont pas eu besoin d’acquérir des compétences avancées en électricité pour pouvoir utiliser des appareils électriques domestiques en toute sécurité.<br><br>
@@ -130,47 +130,21 @@
 
 </section>
 
+<section class="terminal-section article-section" id="fraude-2026">
+  <h2>La fraude en 2025-2026</h2>
 
-    <!-- ===== SECTION TYPE : THÈME / MYTHE ===== -->
-    <section class="terminal-section" id="mythe-1">
-      <h2>« Exemple de question / mythe / idée reçue »</h2>
+  <p>
+    Selon le <a href="https://antifraudcentre-centreantifraude.ca/index-fra.htm"
+         target="_blank" rel="noopener noreferrer"><strong>Centre antifraude du Canada</strong></a>, plus de 23,000 victimes de fraudes ont été recensées au Canada sur les 9 premiers mois de l’année 2025, 
+    représentant une perte financière de 544M$. À ce chiffre, il convient d’ajouter le nombre de cas non déclarés, par ignorance des institutions à contacter ou, trop souvent, par sentiment de honte d’avoir été piégé. 
+  </p>
 
-      <!-- Image centrée (comme sur protection-pme.html) -->
-      <figure class="article-image">
-        <img src="img/placeholder.png" alt="Description de l’illustration">
-        <!-- <figcaption>Légende optionnelle.</figcaption> -->
-      </figure>
+  <div class="callout-retain">
+    <strong>À retenir</strong><br>
+    Il n’y a aucune honte à s’être fait berner, cela peut arriver à n’importe qui!
+  </div>
+</section>
 
-      <p>
-        [Texte à venir…]
-      </p>
-
-      <h3>À retenir</h3>
-      <p>
-        [Encadré “à retenir” : sur ta page source, c’est un intertitre + une phrase concise.]
-      </p>
-
-      <h3>Quelques chiffres</h3>
-      <ul>
-        <li>[Chiffre 1 + source éventuelle]</li>
-        <li>[Chiffre 2 + source éventuelle]</li>
-        <li>[Chiffre 3 + source éventuelle]</li>
-      </ul>
-
-      <h3>Activité</h3>
-      <p>
-        [Une question simple / mini-exercice / action concrète à faire.]
-      </p>
-    </section>
-
-    <!-- ===== SECTION SUIVANTE (placeholder) ===== -->
-    <section class="terminal-section" id="suite">
-      <h2>Section suivante</h2>
-      <p>[Contenu à venir…]</p>
-
-      <h3>À retenir</h3>
-      <p>[Point clé…]</p>
-    </section>
 
     <!-- ===== CONCLUSION / CONTACT ===== -->
     <section class="terminal-section" id="contact">
