--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -139,16 +139,11 @@
     représentant une perte financière de 544M$. À ce chiffre, il convient d’ajouter le nombre de cas non déclarés, par ignorance des institutions à contacter ou, trop souvent, par sentiment de honte d’avoir été piégé. 
   </p>
 
-  <div class="callout-retain">
-    <strong>À retenir</strong><br>
-    Il n’y a aucune honte à s’être fait berner, cela peut arriver à n’importe qui!
-  </div>
-
   <p>
     Les criminels usent de nombreux stratagèmes pour parvenir à leurs fins, alliant ingénierie sociale, et exploitation des vulnérabilités techniques des appareils et logiciels utilisés par leurs victimes. 
   </p>
   <div class="callout-retain">
-    <strong>Qu’est ce que l’ingénierie sociale</strong><br>
+    <strong>Qu’est ce que l’ingénierie sociale</strong><br><br>
     L’<a href="https://www.ibm.com/fr-fr/think/topics/social-engineering"
          target="_blank" rel="noopener noreferrer"><strong>ingénierie sociale</strong></a> est un ensemble de techniques de manipulation utilisées par un criminel pour tromper les gens et leur faire révéler des informations confidentielles, comme des mots de passe ou des numéros de carte bancaire, ou pour les pousser à faire quelque chose de dangereux, comme cliquer sur un lien malveillant. Ces techniques exploiteront toute la palette des sentiments humains (peur, confiance, empressement,  solitude, …) pour permettre au criminel de parvenir à ses fins.
   </div>
@@ -156,7 +151,7 @@
   <p>Qu’il s’agisse de tentatives d’hameçonnage par courriel ou texto, d’appels vocaux frauduleux, de faux dépannages informatiques, de fraudes sentimentales, de harcèlement en ligne, de faux livreurs ou de faux policiers, les criminels font preuve d’une imagination débordante pour vous piéger. Les incidents de cybersécurité se concrétisant par une perte financière, un vol d’identité ou de l’intimidation font  malheureusement désormais partie de notre quotidien, et leurs conséquences peuvent être dramatiques. 
   </p>
     <figure class="article-image">
-    <img src="img/consequences-attaque.jpeg">
+    <img src="img/consequences-attaque.png">
   </figure>
 </section>
 
