--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -124,8 +124,7 @@
     <strong>Quatre profils différents, un problème commun.</strong><br><br>
 
     - Toutes et tous font un usage quotidien de leurs appareils connectés, ont conscience que leurs activités en ligne  ne sont pas sans risque, et aimeraient s’assurer qu’ils sont correctement protégés.<br><br>
-    - Submergés par un flot d’informations sur la meilleure conduite à tenir, ils peinent toutefois à s’y retrouver, et pensent que la mise en place d’une protection efficace n’est pas dans leur champ de compétences naturelles.<br><br>
-    - Après tout, ils n’ont pas eu besoin d’acquérir des compétences avancées en électricité pour pouvoir utiliser des appareils électriques domestiques en toute sécurité.<br><br>
+    - Submergés par un flot d’informations sur la meilleure conduite à tenir, ils peinent toutefois à s’y retrouver, et pensent que la mise en place d’une protection efficace n’est pas dans leur champ de compétences naturelles. Après tout, ils n’ont pas eu besoin d’acquérir des compétences avancées en électricité pour pouvoir utiliser des appareils électriques domestiques en toute sécurité.<br><br>
 </div>
 
 </section>
@@ -152,7 +151,19 @@
   </div>
   
 </section>
-
+<section class="terminal-section article-section" id="reponse-industrie">
+  <h2>La réponse de l’industrie à ces défis</h2>
+  <p>
+    <i>“Gestionnaire de mots de passe, authentification multi-facteurs (2FA), sauvegardes hors ligne,  modification des configurations par défaut des appareils connectés, gestion des privilèges, mises à jour des systèmes d’exploitation et des logiciels, etc..” </i><br><br>
+    <figure class="article-image" id="reponse-industrie-outils"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/reponse industrie - outils.jpeg"
+           class="img-reduite"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
+  </p>
+  <p>Cette liste d ‘outils non exhaustive révèle une réalité : l’industrie propose de nombreuses solutions techniques, pour répondre a des problèmes techniques ou pour réduire le risque qu’un utilisateur s’y trouve exposé. </p><br><br>
+</section>
 
     <!-- ===== CONCLUSION / CONTACT ===== -->
     <section class="terminal-section" id="contact">
