--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -163,6 +163,28 @@
     </figure>
   </p>
   <p>Cette liste d ‘outils non exhaustive révèle une réalité : l’industrie propose de nombreuses solutions techniques, pour répondre a des problèmes techniques ou pour réduire le risque qu’un utilisateur s’y trouve exposé. </p><br><br>
+  <p>Elle soulève toutefois deux questions fondamentales :</p>
+
+  <p> 
+    - Les actions à réaliser par l’usager pour identifier le bon outil, dans le bon contexte, et le mettre en œuvre en pratique, nécessite souvent des connaissances que nos quatre personnages fictifs estiment ne pas posséder, à tort ou à raison. <br><br>
+        <figure class="article-image" id="nasa"
+            style="text-align:center; margin:20px 0;">
+        <img src="img/nasa.jpeg"
+           class="img-reduite"
+           style="max-width:50%; border-radius:10px; border:1px solid #3fb95033;">
+        </figure>
+    - Si les outils en question les protégeront généralement très bien des risques techniques associés à leurs appareils et applications, ils ne pourront rien contre le hacking du cerveau humain, aussi nommé « ingénierie sociale ».
+    Peu importe que le mot de passe de votre application bancaire soit unique, composé de 15 caractères minimum et stocké dans un gestionnaire de mots de passe réputé, si vous le transmettez au nouveau « conseiller bancaire » avec lequel vous êtes actuellement en communication téléphonique. Un conseiller bancaire qui, en réalité, est un  cybercriminel suffisamment persuasif pour vous inciter, sous un prétexte quelconque, à lui donner vos informations personnelles et accéder à votre dossier pour réaliser des transferts de fonds vers un compte qu’il contrôle.
+    
+          <figure class="article-image" id="manipulation"
+            style="text-align:center; margin:20px 0;">
+          <img src="img/manipulation.png"
+           class="img-reduite"
+           style="max-width:50%; border-radius:10px; border:1px solid #3fb95033;">
+          </figure>
+  
+  </p>
+  
 </section>
 
     <!-- ===== CONCLUSION / CONTACT ===== -->
