--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -167,22 +167,15 @@
 
   <p> 
     - Les actions à réaliser par l’usager pour identifier le bon outil, dans le bon contexte, et le mettre en œuvre en pratique, nécessite souvent des connaissances que nos quatre personnages fictifs estiment ne pas posséder, à tort ou à raison. <br><br>
-        <figure class="article-image" id="nasa"
-            style="text-align:center; margin:20px 0;">
-        <img src="img/nasa.jpeg"
-           class="img-reduite"
-           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
-        </figure>
-    - Si les outils en question les protégeront généralement très bien des risques techniques associés à leurs appareils et applications, ils ne pourront rien contre le hacking du cerveau humain, aussi nommé « ingénierie sociale ».
-    Peu importe que le mot de passe de votre application bancaire soit unique, composé de 15 caractères minimum et stocké dans un gestionnaire de mots de passe réputé, si vous le transmettez au nouveau « conseiller bancaire » avec lequel vous êtes actuellement en communication téléphonique. Un conseiller bancaire qui, en réalité, est un  cybercriminel suffisamment persuasif pour vous inciter, sous un prétexte quelconque, à lui donner vos informations personnelles et accéder à votre dossier pour réaliser des transferts de fonds vers un compte qu’il contrôle.
-    
-          <figure class="article-image" id="manipulation"
-            style="text-align:center; margin:20px 0;">
-          <img src="img/manipulation.png"
-           class="img-reduite"
-           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
-          </figure>
-  
+
+    - Si les outils en question les protégeront généralement très bien des risques techniques associés à leurs appareils et applications, ils ne pourront rien contre le hacking du cerveau humain, aussi nommé « ingénierie sociale ».<br>
+    Peu importe que le mot de passe de votre application bancaire soit unique, composé de 15 caractères minimum et stocké dans un gestionnaire de mots de passe réputé, si vous le transmettez au nouveau « conseiller bancaire » avec lequel vous êtes actuellement en communication téléphonique. Un conseiller bancaire qui, en réalité, est un  cybercriminel suffisamment persuasif pour vous inciter, sous un prétexte quelconque, à lui donner vos informations personnelles et accéder à votre dossier pour réaliser des transferts de fonds vers un compte qu’il contrôle.<br>
+  </p>
+
+  <p>Comprenons-nous bien : ces outils de protection sont absolument fondamentaux, ils constituent un filet de protection très efficace pour prévenir les attaques les plus courantes dont vous pourriez être la victime. <br>
+    MAIS il serait éminemment   dangereux (et totalement faux) de croire que l’on peut transférer l’entière  responsabilité de la gestion de nos mauvaises pratiques numériques à des outils, aussi efficaces soient-ils. <br>
+    Leur utilisation n’est en aucun cas une invitation à cliquer sans discernement sur des liens douteux, ou à communiquer ses informations personnelles à un interlocuteur sans avoir pris la peine de vérifier qu’il est bien la personne qu’il prétend être. <br>
+    Pour vous protéger au mieux  contre les menaces en ligne qui vous guettent, vous aurez non seulement besoin d’outils efficaces, mais aussi de vigilance et d’un bon jugement!
   </p>
   
 </section>
