--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -162,14 +162,14 @@
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>
   </p>
-  <p>Cette liste d ‘outils non exhaustive révèle une réalité : l’industrie propose de nombreuses solutions techniques, pour répondre a des problèmes techniques ou pour réduire le risque qu’un utilisateur s’y trouve exposé. </p><br>
+  <p>Cette liste d ‘outils non exhaustive révèle une réalité : l’industrie propose de nombreuses solutions techniques, pour répondre a des problèmes techniques ou pour réduire le risque qu’un utilisateur s’y trouve exposé. </p>
   <p>Elle soulève toutefois deux questions fondamentales :</p>
 
   <p> 
     - Les actions à réaliser par l’usager pour identifier le bon outil, dans le bon contexte, et le mettre en œuvre en pratique, nécessite souvent des connaissances que nos quatre personnages fictifs estiment ne pas posséder, à tort ou à raison. <br><br>
 
     - Si les outils en question les protégeront généralement très bien des risques techniques associés à leurs appareils et applications, ils ne pourront rien contre le hacking du cerveau humain, aussi nommé « ingénierie sociale ».<br><br>
-    Peu importe que le mot de passe de votre application bancaire soit unique, composé de 15 caractères minimum et stocké dans un gestionnaire de mots de passe réputé, si vous le transmettez au nouveau « conseiller bancaire » avec lequel vous êtes actuellement en communication téléphonique. Un conseiller bancaire qui, en réalité, est un  cybercriminel suffisamment persuasif pour vous inciter, sous un prétexte quelconque, à lui donner vos informations personnelles et accéder à votre dossier pour réaliser des transferts de fonds vers un compte qu’il contrôle.<br>
+    Peu importe que le mot de passe choisi pour votre application bancaire respecte les recommandations courantes (longueur et complexité), si vous le transmettez au faux « conseiller bancaire » et véritable cybercriminel avec lequel vous êtes actuellement en communication téléphonique. <br>
       <figure class="article-image" id="manipulation"
             style="text-align:center; margin:20px 0;">
       <img src="img/manipulation.png"
@@ -182,11 +182,22 @@
   <p>Comprenons-nous bien : ces outils de protection sont absolument fondamentaux, ils constituent un filet de protection très efficace pour prévenir les attaques les plus courantes dont vous pourriez être la victime. <br><br>
     MAIS il serait éminemment   dangereux (et totalement faux) de croire que l’on peut transférer l’entière  responsabilité de la gestion de nos mauvaises pratiques numériques à des outils, aussi efficaces soient-ils. <br><br>
     Leur utilisation n’est en aucun cas une invitation à cliquer sans discernement sur des liens douteux, ou à communiquer ses informations personnelles à un interlocuteur sans avoir pris la peine de vérifier qu’il est bien la personne qu’il prétend être. <br><br>
-    Pour vous protéger au mieux  contre les menaces en ligne qui vous guettent, vous aurez non seulement besoin d’outils efficaces, mais aussi de <b><u>vigilance</u></b>vigilance et d’un <b><u>bon jugement</u></b>!
+    Pour vous protéger au mieux  contre les menaces en ligne qui vous guettent, vous aurez non seulement besoin d’outils efficaces, mais aussi de <b><u>vigilance</u></b> et d’un <b><u>bon jugement</u></b>!
   </p>
   
 </section>
+<section class="terminal-section article-section" id="defense-civile">
+  <h2>Une défense civile pour mieux protéger nos communautés </h2>
+<p>Il est illusoire d’imaginer une société civile protégée et résiliente, si la majorité de ses citoyens n’est pas pleinement engagée face aux menaces numériques. Une armée de spécialistes et un arsenal d’outils sophistiqués pourront sans nul doute gagner des batailles, mais ne certainement pas une guerre, s’ils ne bénéficient de l’appui d’une défense civile consciente des enjeux, entraînée et parfaitement organisée. <br>
+      <figure class="article-image" id="defense-civile"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/defense-civile.jpeg"
+           class="img-reduite"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>
 
+</p>
+</section> 
     <!-- ===== CONCLUSION / CONTACT ===== -->
     <section class="terminal-section" id="contact">
       <h2>Vous êtes prêt à franchir le pas&nbsp;?</h2>
