--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -188,7 +188,7 @@
 </section>
 <section class="terminal-section article-section" id="defense-civile">
   <h2>Une défense civile pour mieux protéger nos communautés </h2>
-<p>Il est illusoire d’imaginer une société civile protégée et résiliente, si la majorité de ses citoyens n’est pas pleinement engagée face aux menaces numériques. Une armée de spécialistes et un arsenal d’outils sophistiqués pourront sans nul doute gagner des batailles, mais ne certainement pas une guerre, s’ils ne bénéficient de l’appui d’une défense civile consciente des enjeux, entraînée et parfaitement organisée. <br>
+<p>Il est illusoire d’imaginer une société civile protégée et résiliente, si la majorité de ses citoyens n’est pas pleinement engagée face aux menaces numériques. Une armée de spécialistes et un arsenal d’outils sophistiqués pourront sans nul doute gagner des batailles, mais certainement pas une guerre, s’ils ne bénéficient de l’appui d’une défense civile consciente des enjeux, entraînée et parfaitement organisée. <br>
       <figure class="article-image" id="defense-civile"
             style="text-align:center; margin:20px 0;">
       <img src="img/defense-civile.jpeg"
@@ -198,6 +198,11 @@
 
 </p>
 </section> 
+
+<section class="terminal-section article-section" id="mes-services">
+  <h2>Mes services pour les citoyens</h2>
+
+</section>   
     <!-- ===== CONCLUSION / CONTACT ===== -->
     <section class="terminal-section" id="contact">
       <h2>Vous êtes prêt à franchir le pas&nbsp;?</h2>
