--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -201,7 +201,22 @@
 
 <section class="terminal-section article-section" id="mes-services">
   <h2>Mes services pour les citoyens</h2>
+  <p>
+  <b>Formation de sensibilisation et accompagnement personnalisé </b><br> 
+    Ce service s’adresse aux citoyens qui n’ont pas de connaissance préalable en informatique mais souhaitent prendre en main leur sécurité numérique. <br>
+Par le biais d’ateliers en petits groupe ou de rencontres individuelles, en présentiel ou en appel vidéo, nous passerons en revue les points essentiels à considérer pour améliorer immédiatement votre sécurité en ligne, tout en vous aidant  à développer une culture de cybersécurité pratique.<br>
+    <i>« Suis-je 100 % protégé si j’installe un antivirus ? », « qu’est-ce qu’un passkey? », « les messages passionnés que m’envoie ma star de cinéma préférée sur ma messagerie privée sont-ils trop beaux pour être vrais? »</i><br>
 
+        <figure class="article-image" id="brad-pitt"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/bradpitt.jpeg"
+           class="img-reduite"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>  
+    <i>« Si c’est trop beau pour être vrai, ce n’est probablement pas vrai »</i>
+  </p>
+  <p>Nous aborderons toutes les questions qui vous préoccupent. Aucune n’est stupide. Les poser représente une partie du chemin vers la solution recherchée. <br>
+    L’objectif est de vous aider à développer une <b><u>saine vigilance</u></b> et d’améliorer aussi vite que possible vos défenses contre  les acteurs malveillants.</p>
 </section>   
     <!-- ===== CONCLUSION / CONTACT ===== -->
     <section class="terminal-section" id="contact">
