--- a/projects/phares/citoyens.html
+++ b/projects/phares/citoyens.html
@@ -205,20 +205,42 @@
   <b>Formation de sensibilisation aux dangers en ligne. Accompagnement personnalisé </b><br> 
     Ce service s’adresse aux citoyens qui n’ont pas de connaissance préalable en informatique mais souhaitent prendre en main leur sécurité numérique. <br>
 Par le biais d’ateliers en petits groupe ou de rencontres individuelles, en présentiel ou en appel vidéo, nous passerons en revue les points essentiels à considérer pour améliorer immédiatement votre sécurité en ligne, tout en vous aidant  à développer une culture de cybersécurité pratique.<br>
-    <i>« Suis-je 100 % protégé si j’installe un antivirus ? », « qu’est-ce qu’un passkey? », « les messages passionnés que m’envoie ma star de cinéma préférée sur ma messagerie privée sont-ils trop beaux pour être vrais? »</i><br>
-
-        <figure class="article-image" id="brad-pitt"
+    <figure class="article-image" id="formation-citoyens"
             style="text-align:center; margin:20px 0;">
-      <img src="img/bradpitt.jpeg"
+      <img src="img/formation-citoyens.png"
            class="img-reduite"
            style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
     </figure>  
+
   </p>
-    <p>style="text-align:center;
-      <i>« Si c’est trop beau pour être vrai, ce n’est probablement pas vrai »</i></p>
-  <p>Nous aborderons toutes les questions qui vous préoccupent. Aucune n’est stupide. Les poser représente une partie du chemin vers la solution recherchée.
+
+  <p>
+    <i>« Suis-je 100 % protégé si j’installe un antivirus ? qu’est-ce qu’un passkey? Les messages passionnés que m’envoie ma star de cinéma préférée sur ma messagerie privée sont-ils trop beaux pour être vrais? »</i><br>
+
+    Nous aborderons toutes les questions qui vous préoccupent. Aucune n’est stupide. Les poser représente une partie du chemin vers la solution recherchée.
     L’objectif est de vous aider à développer une <b><u>saine vigilance</u></b> et d’améliorer aussi vite que possible vos défenses contre  les acteurs malveillants.</p>
-</section>   
+</section> 
+<section class="terminal-section article-section" id="securisation">
+  <h2>Vérification et sécurisation de votre environnement numérique</h2>
+  <p>
+
+<figure class="article-image" id="securisation"
+            style="text-align:center; margin:20px 0;">
+      <img src="img/securisation.jpeg"
+           class="img-reduite"
+           style="max-width:100%; border-radius:10px; border:1px solid #3fb95033;">
+    </figure>  
+    Ce service de conseil et de mise en oeuvre effective de vos lignes de défense vous permettra notamment de:
+    • Sécuriser vos appareils électroniques (téléphone, tablette, appareils intelligents)
+    • Sécuriser votre réseau local, 
+    • Sécuriser vos comptes courriel, 
+    • Implémenter l’authentification multi-facteurs pour vos comptes en ligne critiques,
+    • Choisir et implémenter des stratégies de sauvegarde de vos fichiers sensibles, 
+N’hésitez pas à me soumettre vos situations spécifiques, que nous étudierons  ensemble au cas par cas en vue de trouver la meilleure solution.   
+  </p>
+</section>
+    
+    
     <!-- ===== CONCLUSION / CONTACT ===== -->
     <section class="terminal-section" id="contact">
       <h2>Vous êtes prêt à franchir le pas&nbsp;?</h2>
